# vaultkeeper

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  USER_AGENT_INSTRUCTIONS.md  eslint.config.ts  nx.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.base.json  tsconfig.json  tsconfig.test.json
.cargo/: config.toml
.changeset/: add-cli-package.md  add-sign-verify.md  backend-aware-doctor.md  backend-discovery.md  cli-skip-doctor.md  cli-test-infrastructure.md  config-trusttier-compat.md  config.json  dx-docs-exports.md  error-type-fixes.md  fix-backend-registration.md  listable-backend.md  monorepo-conversion.md  platform-aware-config.md  reduce-public-api.md  release-pipeline-fixes.md  release-workflow.md  rust-core-wasm-sdk.md  sdk-migration-per-access.md  yubikey-aes-gcm.md
.github/workflows/: ci.yml  release.yml
crates/vaultkeeper-cli/: Cargo.toml
crates/vaultkeeper-cli/src/: host.rs  main.rs
crates/vaultkeeper-cli/tests/: cli_integration.rs
crates/vaultkeeper-conformance/: Cargo.toml
crates/vaultkeeper-conformance/src/: export.rs  lib.rs
crates/vaultkeeper-conformance/tests/: run_conformance.rs
crates/vaultkeeper-core/: Cargo.toml
crates/vaultkeeper-core/src/: errors.rs  lib.rs  types.rs  vault.rs
crates/vaultkeeper-core/src/access/: mod.rs
crates/vaultkeeper-core/src/backend/: file.rs  in_memory.rs  mod.rs  registry.rs  types.rs
crates/vaultkeeper-core/src/config/: mod.rs
crates/vaultkeeper-core/src/doctor/: checks.rs  mod.rs  types.rs
crates/vaultkeeper-core/src/identity/: hash.rs  manifest.rs  mod.rs  trust.rs  types.rs
crates/vaultkeeper-core/src/jwe/: mod.rs  token.rs  types.rs
crates/vaultkeeper-core/src/keys/: manager.rs  mod.rs  types.rs
crates/vaultkeeper-core/src/util/: mod.rs  time.rs
crates/vaultkeeper-core/tests/: unit_tests.rs
crates/vaultkeeper-wasm/: Cargo.toml
crates/vaultkeeper-wasm/src/: lib.rs  wasm_impl.rs
docs/api/: index.md  test-helpers.inmemorybackend.clear.md  test-helpers.inmemorybackend.delete.md  test-helpers.inmemorybackend.displayname.md  test-helpers.inmemorybackend.exists.md  test-helpers.inmemorybackend.isavailable.md  test-helpers.inmemorybackend.md  test-helpers.inmemorybackend.retrieve.md  test-helpers.inmemorybackend.size.md  test-helpers.inmemorybackend.store.md  test-helpers.inmemorybackend.type.md  test-helpers.md  test-helpers.testvault.backend.md  test-helpers.testvault.create.md  test-helpers.testvault.keeper.md  test-helpers.testvault.md  test-helpers.testvault.reset.md  test-helpers.testvaultoptions.md  test-helpers.testvaultoptions.trusttier.md  test-helpers.testvaultoptions.ttlminutes.md  vaultkeeper.addtrustedhash.md  vaultkeeper.authorizationdeniederror._constructor_.md  vaultkeeper.authorizationdeniederror.md  vaultkeeper.backendconfig.enabled.md  vaultkeeper.backendconfig.md  vaultkeeper.backendconfig.path.md  vaultkeeper.backendconfig.plugin.md  vaultkeeper.backendconfig.type.md  vaultkeeper.backendfactory.md  vaultkeeper.backendlockederror._constructor_.md  vaultkeeper.backendlockederror.interactive.md  vaultkeeper.backendlockederror.md  vaultkeeper.backendregistry.create.md  vaultkeeper.backendregistry.gettypes.md  vaultkeeper.backendregistry.md  vaultkeeper.backendregistry.register.md  vaultkeeper.backendunavailableerror._constructor_.md  vaultkeeper.backendunavailableerror.attempted.md  vaultkeeper.backendunavailableerror.md  vaultkeeper.backendunavailableerror.reason.md  (+240 more)
scripts/: collect-api-json.mjs  version.sh
src/: config.ts  errors.ts  index.ts  types.ts
src/access/: controlled-direct.ts  delegated-exec.ts  delegated-fetch.ts  index.ts  types.ts
src/backend/: index.ts  secret-tool-backend.ts  types.ts
src/doctor/: index.ts  runner.ts
src/identity/: hash.ts  session.ts
src/jwe/: claims.ts
src/keys/: index.ts  types.ts
src/util/: platform.ts
test/e2e/: key-rotation.test.ts
test/integration/backend/: file-backend.test.ts
test/unit/access/: delegated-fetch.test.ts
test/unit/backend/: file-backend.test.ts  keychain-backend.test.ts  one-password-backend.test.ts  secret-tool-backend.test.ts  yubikey-backend.test.ts
test/unit/doctor/: checks.test.ts  runner.test.ts
test/unit/identity/: manifest.test.ts
test/unit/jwe/: claims.test.ts  token.test.ts
test/unit/util/: exec.test.ts  platform.test.ts
