[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/vaultkeeper"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Crypto (RustCrypto ecosystem — all wasm32-compatible)
aes-gcm = "0.10"
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }
getrandom = "0.3"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
assert_matches = "1"
