[package]
name = "vaultkeeper-cli"
description = "Native CLI binary for vaultkeeper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vaultkeeper"
path = "src/main.rs"

[dependencies]
vaultkeeper-core = { path = "../vaultkeeper-core" }
async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { workspace = true }
